assets/css/style.css
body {
    /* Background pattern from Toptal Subtle Patterns */
    /* background-image: url("../images/retina_wood_@2X.png");
    background-attachment: fixed;
    background-size: 100vw 100vh;
    background-repeat: no-repeat; */
    margin: 0;
    font-family: Georgia, 'Times New Roman', Times, serif;
    overflow-x: hidden;
    min-height: 100%;
}

.parallax-window {
    min-height: 400px;
    background: transparent;
}

nav {
    background-color: #253b02;
    position: fixed;
    top: 0;
    width: 100%;
    text-align: center;
    height: 75px;
    z-index: 100;
    margin-bottom: 50px
}

.header ul {
    list-style: none;
}

.header li a {
    color: #dddddd;
}

.header {
    color: #dddddd;
}

#home {
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    top: 50%;
    color: #dddddd;
}

.about {
    font-size: 1.25rem;
    top: 50%;
    position: absolute;
    left: 30%;
    transform: translate(-30%, -50%)
}

#about {
    height: 530px
}

.portfolio {
    font-size: 1.25rem;
    position: absolute;
    top: 50%;
    left: 70%;
    transform: translate(-70%, -50%)
}
.contact {
    display: none;
}

.container-fluid {
    position: absolute;
    width: 100%;
}

.about-content {
    position: absolute;
    top: 400px;
    background-color: aliceblue;
}

#portfolio {
    position: absolute;
    top: 1200px;
    background-color: beige;
    width: 100%;
}

#portfolio-content {
    left: 3%;
}

.portfolio-header {
    position: absolute;
    top: 0;
    left: 50px;
}

.portfolio-content img {
    width: 480px;
    height: 360px;;
}
.footer {
    position: sticky;
    bottom: 0;
}


.folio-gallows img {
    left: 50px;
}
.gallows-para {
    
}
@media screen and (max-width:980px) {
    body {
        width: 100vw;
        overflow-x: hidden;
    }
    @keyframes container {
        0% {left: -700px; position: absolute}
        50% {left: 0}
        95% {left: 150px}
        100% {float: left; position: static;}
    }

    @keyframes footer {
        0% {position: fixed; bottom: -100px;}
        95% {position: fixed; bottom: -100px;}
    }


    .container-fluid, .container {
        position: static;
        float: left;
        width: 70vw;
        margin-left: 25px;
        animation: container 2s linear;
    }
    
    #me {
        width: 40vw;
        height: auto;
    }
    ul {
        float: none;
        justify-content: flex-end;
        width: 95vw;
    }
    .footer {
        clear: both;
        animation: footer 1s linear;
    }

    .row img {
        width: 30vw;
        height: auto;
    }

    .name {
        width: 33.4%
    }
}


@media screen and (max-width: 768px) {
    body {
        overflow-x: hidden;
        width: 100vw;
    }

    @keyframes container {
        0% {opacity: 0;}
        100% {opacity: 1.0;}
    }

    .container-fluid, .container {
        margin-top: 25px;
        width: 90vw;
        height: auto;
        animation: container 1.25s linear;
    }

    #me {
        width: 50vw;
        height: auto;
    }

    ul {
        float: none;
        width: 95vw;
        justify-content: flex-end;
    }

    nav {
        position: static;
        width: 100vw;
        opacity: 1.0;
        margin-bottom: 20px;
    }

    #home {
        left: 5vw;
        text-align: center;
    }

    .name {
        width: 43.3%;
    }
}

@media screen and (max-width: 640px) {
        body {
            overflow-x: hidden;
            max-width: 100vw;
        }

        @keyframes container {
            0% {opacity: 0;}
            100% {opacity: 1.0;}
        }
        
        .gallows {
            position: absolute;
            top: 30%;
        }

        .star-wars {
            position: absolute;
            top: 57%;
        }

        .parks {
            position: absolute;
            top: 84%;
        }

        .train {
            position: absolute;
            top: 111%;
        }

        .content {
            /* position: relative; */
            height: auto;
        }

        .container-fluid, .container {
            /* position: relative; */
            width: 90vw;
            animation: container 1.25s linear;
        }
        
        #me {
            width: 100%;
            height: auto;
        }
    
        ul {
            padding: 15px 0;
            position: absolute;
            background: #dddddd;
            width: 100vw;
            justify-content: center;
            top: 76px;
        }
    
        nav {
            position: static;
            width: 100vw;
            opacity: 1.0;
            margin-bottom: 75px;
        }
    
        #home {
            position: static;
            width: 100vw;
            text-align: center;
        }
    
        .intro {
            clear: both;
            position: static;
        }
    
        .img {
            flex-direction: column;
            /* width: 82.95vw; */
            height: auto;
            justify-content: center;
        }
    }
    

